# MulticastDemo

./: .gitignore  CMakeLists.txt  README.md
Receiver/: CMakeLists.txt
Receiver/Source/: Frame.cpp  Frame.h  ReceiverApp.cpp  ReceiverApp.h
Sender/: CMakeLists.txt
Sender/Source/: Frame.cpp  Frame.h  SenderApp.cpp  SenderApp.h
SocketHelper/: CMakeLists.txt
SocketHelper/Source/: MulticastReceiver.cpp  MulticastReceiver.h  MulticastSender.cpp  MulticastSender.h  MulticastUser.cpp  MulticastUser.h  SocketHelper.cpp  SocketHelper.h  ThreadedMulticastReceiver.cpp  ThreadedMulticastReceiver.h
